--- a/search.html
+++ b/search.html
@@ -6,18 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Search Hub</title>
     <link rel="stylesheet" href="search.css" />
+    <link href="/styles/output.css" rel="stylesheet" />
     <script src="script.js" defer></script>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
-    <div class="search-wrapper">
-      <label for="search">Search Users</label>
-      <input type="search" id="search" data-search />
+
+  <body class="bg-gradient-to-r from-pink-300 to-indigo-400 p-2">
+    <div class="flex flex-col gap-0.25">
+      <label for="search" class="text-lg font-sans font-semibold"
+        >Search Users</label
+      >
+      <input
+        type="search"
+        id="search"
+        placeholder="Search here..."
+        class="text-base rounded-lg p-2"
+        data-search
+      />
     </div>
-    <div class="user-cards" data-user-cards-container></div>
+    <div
+      class="grid grid-cols-1 md:grid-cols-5 gap-0.25 mt-2"
+      data-user-cards-container
+    ></div>
     <template data-user-template>
-      <div class="cards">
-        <div class="header" data-header></div>
-        <div class="body" data-body></div>
+      <div
+        class="bg-gray-100 p-2 border border-slate-500 hover:bg-blue-50 rounded-md border-separate border-spacing-2"
+      >
+        <div class="mb-0.5" data-header></div>
+        <div class="text-stone-500 text-sm overflow-x-scroll" data-body></div>
       </div>
     </template>
   </body>
